# CHIP8.Emulator

./: .gitignore  CHIP8.sln  CMakeLists.txt  CMakePresets.json  README.md
CHIP8/: CHIP8.cpp  CHIP8.sln  CHIP8.vcxproj.filters  CPU.cpp  CPU.h  Memory.cpp  Memory.h
CHIP8.UI.SDL/: CHIP8.UI.SDL.cpp  CHIP8.UI.SDL.vcxproj.filters  Window.h
CHIP8/CHIP8/: CHIP8.cpp  CHIP8.vcxproj  CHIP8.vcxproj.filters  CPU.cpp  CPU.h  KeyEnum.h  Memory.cpp  Memory.h  RegistersEnum.h
CHIP8/CHIP8.UI.SDL/: CHIP8.UI.SDL.cpp  CHIP8.UI.SDL.vcxproj  CHIP8.UI.SDL.vcxproj.filters  Renderer.cpp  Renderer.h
src/CHIP8.Core/: CPU.cpp  CPU.h  Memory.h  RegistersEnum.h
src/CHIP8.UI.SDL/: Main.cpp  Renderer.h  Window.cpp  Window.h
